--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -14,3 +14,11 @@ pull_request_rules:
       backport:
         branches:
           - release/v1.0.x
+  - name: backport patches to v1.1.x branch
+    conditions:
+      - base=main
+      - label=backport/v1.1.x
+    actions:
+      backport:
+        branches:
+          - release/v1.1.x
