--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -30,3 +30,11 @@ pull_request_rules:
       backport:
         branches:
           - release/v1.2.x
+  - name: backport patches to v1.3.x branch
+    conditions:
+      - base=main
+      - label=backport/v1.3.x
+    actions:
+      backport:
+        branches:
+          - release/v1.3.x
