--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -38,3 +38,11 @@ pull_request_rules:
       backport:
         branches:
           - release/v1.3.x
+  - name: backport patches to v1.4.x branch
+    conditions:
+      - base=main
+      - label=backport/v1.4.x
+    actions:
+      backport:
+        branches:
+          - release/v1.4.x
