--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,5 @@
 name: test
 on: push
-env:
-  GO_VERSION: "1.20.8"
 
 jobs:
   test:
@@ -14,7 +12,7 @@ jobs:
       - name: 🐿 Setup Golang
         uses: actions/setup-go@v4
         with:
-          go-version: ${{env.GO_VERSION}}
+          go-version-file: 'go.mod'
       # Test & coverage report creation
       - name: Test & coverage report creation
         run: go test -cover -mod=readonly ./x/...
