--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   lint:
-    uses: ./.github/workflows/lintl.yml
+    uses: ./.github/workflows/lint.yml
 
   test:
     uses: ./.github/workflows/test.yml
