--- a/proto/Dockerfile
+++ b/proto/Dockerfile
@@ -18,3 +18,19 @@ RUN git clone https://github.com/cosmos/gogoproto.git; \
 RUN npm install -g swagger-combine
 
 COPY --from=BUILDER /usr/local/bin /usr/local/bin
+
+# Inject user id and group id to avoid permission issues
+ARG USER_ID=1000
+ARG USER_GID=1000
+
+# Create user and group if they don't exist
+RUN if ! getent group $USER_GID; then \
+  addgroup -g $USER_GID mygroup; \
+fi
+
+RUN if ! getent passwd $USER_ID; then \
+  adduser -D -u $USER_ID -G mygroup myuser; \
+fi
+
+# Change to user
+USER $USER_ID
