--- a/proto/Dockerfile
+++ b/proto/Dockerfile
@@ -23,9 +23,15 @@ COPY --from=BUILDER /usr/local/bin /usr/local/bin
 ARG USER_ID=1000
 ARG USER_GID=1000
 
-# Create group and user
-RUN addgroup -g $USER_GID mygroup && \
-    adduser -D -u $USER_ID -G mygroup myuser
+# Create group if it doesn't exist
+RUN if ! getent group $USER_GID; then \
+  addgroup -g $USER_GID mygroup; \
+fi
+
+# Create user if it doesn't exist
+RUN if ! getent passwd $USER_ID; then \
+  adduser -D -u $USER_ID -G $(getent group $USER_GID | cut -d: -f1) myuser; \
+fi
 
 # Change to user
 USER $USER_ID
