fix: genesis validation error

--- a/config.yml
+++ b/config.yml
@@ -31,10 +31,10 @@ accounts:
       - 1000000000000000tkyve
     mnemonic: open home share route party lake room solution quantum pact model avocado
       humor dilemma review desert turtle total humor produce rate keen eagle fee
-  #  - name: team
-  #    coins:
-  #      - 165000000000000tkyve
-  #    address: kyve1e29j95xmsw3zmvtrk4st8e89z5n72v7nf70ma4
+  - name: team
+    coins:
+      - 165000000000000tkyve
+    address: kyve1e29j95xmsw3zmvtrk4st8e89z5n72v7nf70ma4
   - name: foundation
     coins:
       # for fees
@@ -49,7 +49,10 @@ accounts:
     mnemonic: hold urge sustain chef furnace foam oven fall harsh core anchor during crew secret
       craft rhythm choose gold soft aisle sort phrase enter orphan
 #    address: kyve1tuxsc7ez79aydyee86qxm05zyx0l7d78c2zzsn
-
+  - name: funders-module   # funders module
+    coins:
+      - 5300000000000tkyve
+    address: kyve1vg5325u5mat0y44g73n8t8z2le26fsa4n947f5
 faucet:
   name: faucet
   coins:
@@ -60,16 +63,6 @@ client:
     path: docs/swagger/swagger.yml
 genesis:
   app_state:
-    bank:
-      balances:
-        - address: "kyve1e29j95xmsw3zmvtrk4st8e89z5n72v7nf70ma4"
-          coins:
-            - denom: "tkyve"
-              amount: "165000000000000000"
-        - address: "kyve1vg5325u5mat0y44g73n8t8z2le26fsa4n947f5"  # funders module (funding from Alice)
-          coins:
-            - denom: "tkyve"
-              amount: "1001234"
     delegation:
       params:
         unbonding_delegation_time: 10
