--- a/proto/buf.yaml
+++ b/proto/buf.yaml
@@ -18,6 +18,7 @@ lint:
     - SERVICE_SUFFIX
     - PACKAGE_VERSION_SUFFIX
     - RPC_REQUEST_STANDARD_NAME
+    - RPC_RESPONSE_STANDARD_NAME
   ignore:
     - tendermint
   use:
