--- a/config.yml
+++ b/config.yml
@@ -69,12 +69,6 @@ genesis:
             - denom: "tkyve"
               amount: "165000000000000000"
       supply:
-#        - denom: "acoin"
-#          amount: "6000000000"
-#        - denom: "bcoin"
-#          amount: "6000000000000"
-#        - denom: "ccoin"
-#          amount: "6000000000"
         - denom: "tkyve"
           amount: "165000000000000000"
     delegation:
@@ -83,7 +77,7 @@ genesis:
     global:
       params:
         burn_ratio: "0.5"
-        min_gas_price: "1"
+        min_gas_price: "0.02"
     gov:
       params:
         voting_period: 120s
@@ -144,6 +138,7 @@ genesis:
     pool:
       params:
         protocol_inflation_share: "0.1"
+        max_voting_power_per_pool: "1"
       pool_count: "1"
       pool_list:
         - config: "{\"network\":\"kyve-1\",\"rpc\":\"https://rpc.kyve.network\"}"
@@ -188,21 +183,21 @@ genesis:
         min_funding_multiple: 10
         coin_whitelist:
           - coin_denom: "tkyve"
-            min_funding_amount: "100000000"
+            min_funding_amount: "10000000"
             min_funding_amount_per_bundle: "1000000"
-            coin_weight: "0.06"
+            coin_weight: "0.055"
           - coin_denom: "acoin"
-            min_funding_amount: "100000000"
+            min_funding_amount: "10000000"
             min_funding_amount_per_bundle: "1000000"
-            coin_weight: "9"
+            coin_weight: "10.3"
           - coin_denom: "bcoin"
-            min_funding_amount: "100000000000"
+            min_funding_amount: "10000000000"
             min_funding_amount_per_bundle: "1000000000"
-            coin_weight: "0.06"
+            coin_weight: "0.095"
           - coin_denom: "ccoin"
-            min_funding_amount: "100000000"
+            min_funding_amount: "10000000"
             min_funding_amount_per_bundle: "1000000"
-            coin_weight: "0.01"
+            coin_weight: "0.86"
       funder_list:
         - address: "kyve1jq304cthpx0lwhpqzrdjrcza559ukyy3zsl2vd"
           contact: "https://twitter.com/kyvenetwork"
@@ -224,6 +219,8 @@ genesis:
 validators:
   - name: alice
     bonded: 1000000000000tkyve
+    app:
+      minimum-gas-prices: "0.02tkyve"
     config:
       consensus:
         timeout_commit: "2s"
